--- a/css/style.css
+++ b/css/style.css
@@ -366,3 +366,6 @@ a#a116:hover {width:100px;height:150px;margin:0;padding:0;display:block;backgrou
 
 a#a117{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/yslishat.jpg") 0 0;}
 a#a117:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/yslishat.jpg") 100px 0;}
+
+a#a118{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/atomic_heart.jpg") 0 0;}
+a#a118:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/atomic_heart.jpg") 100px 0;}
