--- a/css/style.css
+++ b/css/style.css
@@ -369,3 +369,6 @@ a#a117:hover {width:100px;height:150px;margin:0;padding:0;display:block;backgrou
 
 a#a118{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/atomic_heart.jpg") 0 0;}
 a#a118:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/atomic_heart.jpg") 100px 0;}
+
+a#a119{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/1001_noch.jpg") 0 0;}
+a#a119:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/1001_noch.jpg") 100px 0;}
