--- a/css/style.css
+++ b/css/style.css
@@ -372,3 +372,6 @@ a#a118:hover {width:100px;height:150px;margin:0;padding:0;display:block;backgrou
 
 a#a119{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/1001_noch.jpg") 0 0;}
 a#a119:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/1001_noch.jpg") 100px 0;}
+
+a#a120{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/zamok_6.jpg") 0 0;}
+a#a120:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/zamok_6.jpg") 100px 0;}
