--- a/css/style.css
+++ b/css/style.css
@@ -375,3 +375,6 @@ a#a119:hover {width:100px;height:150px;margin:0;padding:0;display:block;backgrou
 
 a#a120{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/zamok_6.jpg") 0 0;}
 a#a120:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/zamok_6.jpg") 100px 0;}
+
+a#a121{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/zamok_7.jpg") 0 0;}
+a#a121:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/zamok_7.jpg") 100px 0;}
