--- a/css/style.css
+++ b/css/style.css
@@ -378,3 +378,6 @@ a#a120:hover {width:100px;height:150px;margin:0;padding:0;display:block;backgrou
 
 a#a121{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/zamok_7.jpg") 0 0;}
 a#a121:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/zamok_7.jpg") 100px 0;}
+
+a#a122{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/4_krilo.jpg") 0 0;}
+a#a122:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/4_krilo.jpg") 100px 0;}
