Прочитал Дон Кихот Ламанчский

--- a/css/style.css
+++ b/css/style.css
@@ -381,3 +381,6 @@ a#a121:hover {width:100px;height:150px;margin:0;padding:0;display:block;backgrou
 
 a#a122{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/4_krilo.jpg") 0 0;}
 a#a122:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/4_krilo.jpg") 100px 0;}
+
+a#a123{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/don_kihot.jpg") 0 0;}
+a#a123:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/don_kihot.jpg") 100px 0;}
