--- a/css/style.css
+++ b/css/style.css
@@ -384,3 +384,6 @@ a#a122:hover {width:100px;height:150px;margin:0;padding:0;display:block;backgrou
 
 a#a123{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/don_kihot.jpg") 0 0;}
 a#a123:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/don_kihot.jpg") 100px 0;}
+
+a#a124{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/klark_1.jpg") 0 0;}
+a#a124:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/klark_1.jpg") 100px 0;}
