Прочитал Преждевременное погребение

--- a/css/style.css
+++ b/css/style.css
@@ -387,3 +387,6 @@ a#a123:hover {width:100px;height:150px;margin:0;padding:0;display:block;backgrou
 
 a#a124{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/klark_1.jpg") 0 0;}
 a#a124:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/klark_1.jpg") 100px 0;}
+
+a#a125{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/po_1.jpg") 0 0;}
+a#a125:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/po_1.jpg") 100px 0;}
