Прочитал Разговор с мумией

--- a/css/style.css
+++ b/css/style.css
@@ -390,3 +390,18 @@ a#a124:hover {width:100px;height:150px;margin:0;padding:0;display:block;backgrou
 
 a#a125{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/po_1.jpg") 0 0;}
 a#a125:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/po_1.jpg") 100px 0;}
+
+a#a126{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/po_2.jpg") 0 0;}
+a#a126:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/po_2.jpg") 100px 0;}
+
+a#a127{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/po_3.jpg") 0 0;}
+a#a127:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/po_3.jpg") 100px 0;}
+
+a#a128{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/po_4.jpg") 0 0;}
+a#a128:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/po_4.jpg") 100px 0;}
+
+a#a129{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/po_5.jpg") 0 0;}
+a#a129:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/po_5.jpg") 100px 0;}
+
+a#a130{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/po_6.jpg") 0 0;}
+a#a130:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/po_6.jpg") 100px 0;}
