Прочитал 2010: Одиссея Два

--- a/css/style.css
+++ b/css/style.css
@@ -405,3 +405,6 @@ a#a129:hover {width:100px;height:150px;margin:0;padding:0;display:block;backgrou
 
 a#a130{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/po_6.jpg") 0 0;}
 a#a130:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/po_6.jpg") 100px 0;}
+
+a#a131{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/klark_2.jpg") 0 0;}
+a#a131:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/klark_2.jpg") 100px 0;}
