--- a/css/style.css
+++ b/css/style.css
@@ -408,3 +408,6 @@ a#a130:hover {width:100px;height:150px;margin:0;padding:0;display:block;backgrou
 
 a#a131{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/klark_2.jpg") 0 0;}
 a#a131:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/klark_2.jpg") 100px 0;}
+
+a#a132{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/klark_3.jpg") 0 0;}
+a#a132:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/klark_3.jpg") 100px 0;}
