Прочитал Король Лир

--- a/css/style.css
+++ b/css/style.css
@@ -414,3 +414,6 @@ a#a132:hover {width:100px;height:150px;margin:0;padding:0;display:block;backgrou
 
 a#a133{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/GTA.jpg") 0 0;}
 a#a133:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/GTA.jpg") 100px 0;}
+
+a#a134{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/korol_lir.jpg") 0 0;}
+a#a134:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/korol_lir.jpg") 100px 0;}
