--- a/css/style.css
+++ b/css/style.css
@@ -417,3 +417,7 @@ a#a133:hover {width:100px;height:150px;margin:0;padding:0;display:block;backgrou
 
 a#a134{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/korol_lir.jpg") 0 0;}
 a#a134:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/korol_lir.jpg") 100px 0;}
+
+a#a135{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/tonkoe_iskusstvo.jpg") 0 0;}
+a#a135:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/tonkoe_iskusstvo.jpg") 100px 0;}
+
