--- a/css/typography.css
+++ b/css/typography.css
@@ -53,7 +53,7 @@ padding:5px 0 5px 0;
 
 }
 
-h4 a { color: #ffffff; text-decoration: none; }
+h4 a { color: #000000; text-decoration: none; }
 
 h5 {
 	color: #6ec9cc;
