--- a/css/style.css
+++ b/css/style.css
@@ -421,3 +421,6 @@ a#a134:hover {width:100px;height:150px;margin:0;padding:0;display:block;backgrou
 a#a135{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/tonkoe_iskusstvo.jpg") 0 0;}
 a#a135:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/tonkoe_iskusstvo.jpg") 100px 0;}
 
+a#a136{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/frankishtein.jpg") 0 0;}
+a#a136:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/frankishtein.jpg") 100px 0;}
+
