Прочитал Время инверсий

--- a/css/style.css
+++ b/css/style.css
@@ -427,3 +427,5 @@ a#a136:hover {width:100px;height:150px;margin:0;padding:0;display:block;backgrou
 a#a137{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/grom_1.jpg") 0 0;}
 a#a137:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/grom_1.jpg") 100px 0;}
 
+a#a138{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/dozor_04.jpg") 0 0;}
+a#a138:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/dozor_04.jpg") 100px 0;}
