--- a/css/style.css
+++ b/css/style.css
@@ -429,3 +429,6 @@ a#a137:hover {width:100px;height:150px;margin:0;padding:0;display:block;backgrou
 
 a#a138{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/dozor_04.jpg") 0 0;}
 a#a138:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/dozor_04.jpg") 100px 0;}
+
+a#a139{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/dozor_05.jpg") 0 0;}
+a#a139:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/dozor_05.jpg") 100px 0;}
