--- a/css/style.css
+++ b/css/style.css
@@ -432,3 +432,6 @@ a#a138:hover {width:100px;height:150px;margin:0;padding:0;display:block;backgrou
 
 a#a139{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/dozor_05.jpg") 0 0;}
 a#a139:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/dozor_05.jpg") 100px 0;}
+
+a#a140{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/dozor_14.jpg") 0 0;}
+a#a140:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/dozor_14.jpg") 100px 0;}
