Прочитал Иной среди Иных

--- a/css/style.css
+++ b/css/style.css
@@ -441,3 +441,6 @@ a#a141:hover {width:100px;height:150px;margin:0;padding:0;display:block;backgrou
 
 a#a142{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/dozor_08.jpg") 0 0;}
 a#a142:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/dozor_08.jpg") 100px 0;}
+
+a#a143{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/dozor_10.jpg") 0 0;}
+a#a143:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/dozor_10.jpg") 100px 0;}
