--- a/css/style.css
+++ b/css/style.css
@@ -447,3 +447,6 @@ a#a143:hover {width:100px;height:150px;margin:0;padding:0;display:block;backgrou
 
 a#a144{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/dozor_12.jpg") 0 0;}
 a#a144:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/dozor_12.jpg") 100px 0;}
+
+a#a145{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/dozor_19.jpg") 0 0;}
+a#a145:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/dozor_19.jpg") 100px 0;}
