--- a/css/style.css
+++ b/css/style.css
@@ -450,3 +450,6 @@ a#a144:hover {width:100px;height:150px;margin:0;padding:0;display:block;backgrou
 
 a#a145{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/dozor_19.jpg") 0 0;}
 a#a145:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/dozor_19.jpg") 100px 0;}
+
+a#a146{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/dozor_20.jpg") 0 0;}
+a#a146:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/dozor_20.jpg") 100px 0;}
