--- a/css/style.css
+++ b/css/style.css
@@ -453,3 +453,6 @@ a#a145:hover {width:100px;height:150px;margin:0;padding:0;display:block;backgrou
 
 a#a146{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/dozor_20.jpg") 0 0;}
 a#a146:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/dozor_20.jpg") 100px 0;}
+
+a#a147{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/dozor_21.jpg") 0 0;}
+a#a147:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/dozor_21.jpg") 100px 0;}
