Прочитал Дозоры не работают вместе

--- a/css/style.css
+++ b/css/style.css
@@ -456,3 +456,6 @@ a#a146:hover {width:100px;height:150px;margin:0;padding:0;display:block;backgrou
 
 a#a147{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/dozor_21.jpg") 0 0;}
 a#a147:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/dozor_21.jpg") 100px 0;}
+
+a#a148{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/dozor_22.jpg") 0 0;}
+a#a148:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/dozor_22.jpg") 100px 0;}
