Прочитал Цветной дозор

--- a/css/style.css
+++ b/css/style.css
@@ -459,3 +459,6 @@ a#a147:hover {width:100px;height:150px;margin:0;padding:0;display:block;backgrou
 
 a#a148{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/dozor_22.jpg") 0 0;}
 a#a148:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/dozor_22.jpg") 100px 0;}
+
+a#a149{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/dozor_23.jpg") 0 0;}
+a#a149:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/dozor_23.jpg") 100px 0;}
