--- a/css/style.css
+++ b/css/style.css
@@ -462,3 +462,6 @@ a#a148:hover {width:100px;height:150px;margin:0;padding:0;display:block;backgrou
 
 a#a149{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/dozor_23.jpg") 0 0;}
 a#a149:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/dozor_23.jpg") 100px 0;}
+
+a#a150{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/homodeus.jpg") 0 0;}
+a#a150:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/homodeus.jpg") 100px 0;}
