--- a/css/style.css
+++ b/css/style.css
@@ -468,3 +468,6 @@ a#a150:hover {width:100px;height:150px;margin:0;padding:0;display:block;backgrou
 
 a#a151{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/dozor_24.jpg") 0 0;}
 a#a151:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/dozor_24.jpg") 100px 0;}
+
+a#a152{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/assassins_11.jpg") 0 0;}
+a#a152:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/assassins_11.jpg") 100px 0;}
