--- a/css/style.css
+++ b/css/style.css
@@ -474,3 +474,6 @@ a#a152:hover {width:100px;height:150px;margin:0;padding:0;display:block;backgrou
 
 a#a153{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/dozor_26.jpg") 0 0;}
 a#a153:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/dozor_26.jpg") 100px 0;}
+
+a#a154{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/dozor_27.jpg") 0 0;}
+a#a154:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/dozor_27.jpg") 100px 0;}
