Прочитал Невский Дозор

--- a/css/style.css
+++ b/css/style.css
@@ -477,3 +477,6 @@ a#a153:hover {width:100px;height:150px;margin:0;padding:0;display:block;backgrou
 
 a#a154{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/dozor_27.jpg") 0 0;}
 a#a154:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/dozor_27.jpg") 100px 0;}
+
+a#a155{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/dozor_28.jpg") 0 0;}
+a#a155:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/dozor_28.jpg") 100px 0;}
