--- a/css/style.css
+++ b/css/style.css
@@ -483,3 +483,6 @@ a#a155:hover {width:100px;height:150px;margin:0;padding:0;display:block;backgrou
 
 a#a156{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/byd_nyzhnim.jpg") 0 0;}
 a#a156:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/byd_nyzhnim.jpg") 100px 0;}
+
+a#a157{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/eragon_1.jpg") 0 0;}
+a#a157:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/eragon_1.jpg") 100px 0;}
