Прочитал Эрагон. Возвращение

--- a/css/style.css
+++ b/css/style.css
@@ -489,3 +489,6 @@ a#a157:hover {width:100px;height:150px;margin:0;padding:0;display:block;backgrou
 
 a#a158{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/venus_1.jpg") 0 0;}
 a#a158:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/venus_1.jpg") 100px 0;}
+
+a#a159{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/eragon_2.jpg") 0 0;}
+a#a159:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/eragon_2.jpg") 100px 0;}
