Прочитал Эрагон. Наследие

--- a/css/style.css
+++ b/css/style.css
@@ -495,3 +495,6 @@ a#a159:hover {width:100px;height:150px;margin:0;padding:0;display:block;backgrou
 
 a#a160{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/eragon_3.jpg") 0 0;}
 a#a160:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/eragon_3.jpg") 100px 0;}
+
+a#a161{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/eragon_4.jpg") 0 0;}
+a#a161:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/eragon_4.jpg") 100px 0;}
