--- a/css/style.css
+++ b/css/style.css
@@ -498,3 +498,6 @@ a#a160:hover {width:100px;height:150px;margin:0;padding:0;display:block;backgrou
 
 a#a161{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/eragon_4.jpg") 0 0;}
 a#a161:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/eragon_4.jpg") 100px 0;}
+
+a#a162{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/eragon_5.jpg") 0 0;}
+a#a162:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/eragon_5.jpg") 100px 0;}
