--- a/css/reset.css
+++ b/css/reset.css
@@ -12,7 +12,7 @@ table, caption, tbody, tfoot, thead, tr, th, td {
 	border: 0;
 	outline: 0;
 	font-size: 100%;
-	vertical-align: baseline;
+	vertical-align: middle;
 	background: transparent;
 }
 body {
@@ -38,4 +38,7 @@ q:before, q:after {
 table {
 	border-collapse: collapse;
 	border-spacing: 0;
+	margin: 0;
+	padding: 0;
+	border: 0;
 }
