--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@ body {background-color: #e0e0e0;}
 /* Status Bar */
 /* div#body */
 div#body {margin: 20px auto 20px auto;
-	width: 1060px;}
+	width: 1050px;}
 div#body-con {
     padding: 25px;
     background: #fff;
@@ -12,9 +12,9 @@ div#body-con {
     -moz-box-shadow: 0px 0px 9px 0px rgba(128,125,128,1);
     box-shadow: 0px 0px 9px 0px rgba(128,125,128,1);
     min-height:800px;}
-td img {padding-right:1px;}
+td img {padding:0; }
 
-div#block {width:1009px;padding:0px;margin:0px;display:block;overflow-x:auto;}
+div#block {width:1000px;padding:0px;margin:0px;display:block;overflow-x:auto;}
 
 a#a1 {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/brian_tracy_1.jpg") 0 0;}
 a#a1:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/brian_tracy_1.jpg") 100px 0;}
@@ -501,3 +501,6 @@ a#a161:hover {width:100px;height:150px;margin:0;padding:0;display:block;backgrou
 
 a#a162{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/eragon_5.jpg") 0 0;}
 a#a162:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/eragon_5.jpg") 100px 0;}
+
+a#a163{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/metro_17.jpg") 0 0;}
+a#a163:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/metro_17.jpg") 100px 0;}
