--- a/css/style.css
+++ b/css/style.css
@@ -504,3 +504,6 @@ a#a162:hover {width:100px;height:150px;margin:0;padding:0;display:block;backgrou
 
 a#a163{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/metro_17.jpg") 0 0;}
 a#a163:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/metro_17.jpg") 100px 0;}
+
+a#a164{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/metro_18.jpg") 0 0;}
+a#a164:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/metro_18.jpg") 100px 0;}
