--- a/css/style.css
+++ b/css/style.css
@@ -510,3 +510,6 @@ a#a164:hover {width:100px;height:150px;margin:0;padding:0;display:block;backgrou
 
 a#a165{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/metro_19.jpg") 0 0;}
 a#a165:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/metro_19.jpg") 100px 0;}
+
+a#a166{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/metro_20.jpg") 0 0;}
+a#a166:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/metro_20.jpg") 100px 0;}
