--- a/css/style.css
+++ b/css/style.css
@@ -516,3 +516,6 @@ a#a166:hover {width:100px;height:150px;margin:0;padding:0;display:block;backgrou
 
 a#a167{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/metro_32.jpg") 0 0;}
 a#a167:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/metro_32.jpg") 100px 0;}
+
+a#a168{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/metro_21.jpg") 0 0;}
+a#a168:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/metro_21.jpg") 100px 0;}
