Прочитал Десять негритят

--- a/css/style.css
+++ b/css/style.css
@@ -522,3 +522,6 @@ a#a168:hover {width:100px;height:150px;margin:0;padding:0;display:block;backgrou
 
 a#a169{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/metro_24.jpg") 0 0;}
 a#a169:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/metro_24.jpg") 100px 0;}
+
+a#a170{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/sila_silnih.jpg") 0 0;}
+a#a170:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/sila_silnih.jpg") 100px 0;}
