--- a/css/style.css
+++ b/css/style.css
@@ -525,3 +525,6 @@ a#a169:hover {width:100px;height:150px;margin:0;padding:0;display:block;backgrou
 
 a#a170{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/sila_silnih.jpg") 0 0;}
 a#a170:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/sila_silnih.jpg") 100px 0;}
+
+a#a171{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/tom_soer_1.jpg") 0 0;}
+a#a171:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/tom_soer_1.jpg") 100px 0;}
