--- a/css/style.css
+++ b/css/style.css
@@ -528,3 +528,6 @@ a#a170:hover {width:100px;height:150px;margin:0;padding:0;display:block;backgrou
 
 a#a171{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/tom_soer_1.jpg") 0 0;}
 a#a171:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/tom_soer_1.jpg") 100px 0;}
+
+a#a172{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/tom_soer_2.jpg") 0 0;}
+a#a172:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/tom_soer_2.jpg") 100px 0;}
