Прочитал Том Сойер за границей

--- a/css/style.css
+++ b/css/style.css
@@ -534,3 +534,6 @@ a#a172:hover {width:100px;height:150px;margin:0;padding:0;display:block;backgrou
 
 a#a173{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/atomic_heart_2.jpg") 0 0;}
 a#a173:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/atomic_heart_2.jpg") 100px 0;}
+
+a#a174{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/tom_soer_3.jpg") 0 0;}
+a#a174:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/tom_soer_3.jpg") 100px 0;}
