--- a/css/style.css
+++ b/css/style.css
@@ -537,3 +537,6 @@ a#a173:hover {width:100px;height:150px;margin:0;padding:0;display:block;backgrou
 
 a#a174{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/tom_soer_3.jpg") 0 0;}
 a#a174:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/tom_soer_3.jpg") 100px 0;}
+
+a#a175{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/tom_soer_4.jpg") 0 0;}
+a#a175:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/tom_soer_4.jpg") 100px 0;}
