--- a/css/style.css
+++ b/css/style.css
@@ -540,3 +540,6 @@ a#a174:hover {width:100px;height:150px;margin:0;padding:0;display:block;backgrou
 
 a#a175{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/tom_soer_4.jpg") 0 0;}
 a#a175:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/tom_soer_4.jpg") 100px 0;}
+
+a#a176{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/glaza_drakona.jpg") 0 0;}
+a#a176:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/glaza_drakona.jpg") 100px 0;}
