Прочитал Мистер Мерседес

--- a/css/style.css
+++ b/css/style.css
@@ -543,3 +543,6 @@ a#a175:hover {width:100px;height:150px;margin:0;padding:0;display:block;backgrou
 
 a#a176{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/glaza_drakona.jpg") 0 0;}
 a#a176:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/glaza_drakona.jpg") 100px 0;}
+
+a#a177{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/mister_mers.jpg") 0 0;}
+a#a177:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/mister_mers.jpg") 100px 0;}
