Прочитал Три дня Индиго

--- a/css/style.css
+++ b/css/style.css
@@ -549,3 +549,6 @@ a#a177:hover {width:100px;height:150px;margin:0;padding:0;display:block;backgrou
 
 a#a178{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/ismenennie_1.jpg") 0 0;}
 a#a178:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/ismenennie_1.jpg") 100px 0;}
+
+a#a179{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/ismenennie_2.jpg") 0 0;}
+a#a179:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/ismenennie_2.jpg") 100px 0;}
