Прочитал Месяц за Рубиконом

--- a/css/style.css
+++ b/css/style.css
@@ -552,3 +552,6 @@ a#a178:hover {width:100px;height:150px;margin:0;padding:0;display:block;backgrou
 
 a#a179{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/ismenennie_2.jpg") 0 0;}
 a#a179:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/ismenennie_2.jpg") 100px 0;}
+
+a#a180{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/ismenennie_3.jpg") 0 0;}
+a#a180:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/ismenennie_3.jpg") 100px 0;}
