--- a/css/style.css
+++ b/css/style.css
@@ -558,3 +558,6 @@ a#a180:hover {width:100px;height:150px;margin:0;padding:0;display:block;backgrou
 
 a#a181{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/ismenennie_4.jpg") 0 0;}
 a#a181:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/ismenennie_4.jpg") 100px 0;}
+
+a#a182{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/ostrov_rys_1.jpg") 0 0;}
+a#a182:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/ostrov_rys_1.jpg") 100px 0;}
