Прочитал Двести первый шаг

--- a/css/style.css
+++ b/css/style.css
@@ -561,3 +561,6 @@ a#a181:hover {width:100px;height:150px;margin:0;padding:0;display:block;backgrou
 
 a#a182{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/ostrov_rys_1.jpg") 0 0;}
 a#a182:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/ostrov_rys_1.jpg") 100px 0;}
+
+a#a183{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/201_step.jpg") 0 0;}
+a#a183:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/201_step.jpg") 100px 0;}
