Прочитал Царь, царевич, король, королевич...

--- a/css/style.css
+++ b/css/style.css
@@ -564,3 +564,6 @@ a#a182:hover {width:100px;height:150px;margin:0;padding:0;display:block;backgrou
 
 a#a183{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/201_step.jpg") 0 0;}
 a#a183:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/201_step.jpg") 100px 0;}
+
+a#a184{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/ostrov_rys_2.jpg") 0 0;}
+a#a184:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/ostrov_rys_2.jpg") 100px 0;}
