Прочитал Ловец видений

--- a/css/style.css
+++ b/css/style.css
@@ -567,3 +567,6 @@ a#a183:hover {width:100px;height:150px;margin:0;padding:0;display:block;backgrou
 
 a#a184{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/ostrov_rys_2.jpg") 0 0;}
 a#a184:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/ostrov_rys_2.jpg") 100px 0;}
+
+a#a185{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/lovec_videnii.jpg") 0 0;}
+a#a185:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/lovec_videnii.jpg") 100px 0;}
