--- a/css/style.css
+++ b/css/style.css
@@ -570,3 +570,6 @@ a#a184:hover {width:100px;height:150px;margin:0;padding:0;display:block;backgrou
 
 a#a185{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/lovec_videnii.jpg") 0 0;}
 a#a185:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/lovec_videnii.jpg") 100px 0;}
+
+a#a186{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/izkazh_real_1.jpg") 0 0;}
+a#a186:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/izkazh_real_1.jpg") 100px 0;}
