Прочитал Искажающие реальность. Книга 2

--- a/css/style.css
+++ b/css/style.css
@@ -573,3 +573,6 @@ a#a185:hover {width:100px;height:150px;margin:0;padding:0;display:block;backgrou
 
 a#a186{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/izkazh_real_1.jpg") 0 0;}
 a#a186:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/izkazh_real_1.jpg") 100px 0;}
+
+a#a187{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/izkazh_real_2.jpg") 0 0;}
+a#a187:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/izkazh_real_2.jpg") 100px 0;}
