Прочитал Искажающие реальность. Книга 3

--- a/css/style.css
+++ b/css/style.css
@@ -576,3 +576,6 @@ a#a186:hover {width:100px;height:150px;margin:0;padding:0;display:block;backgrou
 
 a#a187{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/izkazh_real_2.jpg") 0 0;}
 a#a187:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/izkazh_real_2.jpg") 100px 0;}
+
+a#a188{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/izkazh_real_3.jpg") 0 0;}
+a#a188:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/izkazh_real_3.jpg") 100px 0;}
