Прочитал Искажающие реальность. Книга 4

--- a/css/style.css
+++ b/css/style.css
@@ -579,3 +579,6 @@ a#a187:hover {width:100px;height:150px;margin:0;padding:0;display:block;backgrou
 
 a#a188{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/izkazh_real_3.jpg") 0 0;}
 a#a188:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/izkazh_real_3.jpg") 100px 0;}
+
+a#a189{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/izkazh_real_4.jpg") 0 0;}
+a#a189:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/izkazh_real_4.jpg") 100px 0;}
