--- a/css/style.css
+++ b/css/style.css
@@ -582,3 +582,6 @@ a#a188:hover {width:100px;height:150px;margin:0;padding:0;display:block;backgrou
 
 a#a189{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/izkazh_real_4.jpg") 0 0;}
 a#a189:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/izkazh_real_4.jpg") 100px 0;}
+
+a#a190{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/izkazh_real_5.jpg") 0 0;}
+a#a190:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/izkazh_real_5.jpg") 100px 0;}
