--- a/css/style.css
+++ b/css/style.css
@@ -585,3 +585,6 @@ a#a189:hover {width:100px;height:150px;margin:0;padding:0;display:block;backgrou
 
 a#a190{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/izkazh_real_5.jpg") 0 0;}
 a#a190:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/izkazh_real_5.jpg") 100px 0;}
+
+a#a191{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/izkazh_real_6.jpg") 0 0;}
+a#a191:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/izkazh_real_6.jpg") 100px 0;}
