Прочитал Искажающие реальность. Книга 8

--- a/css/style.css
+++ b/css/style.css
@@ -591,3 +591,6 @@ a#a191:hover {width:100px;height:150px;margin:0;padding:0;display:block;backgrou
 
 a#a192{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/izkazh_real_7.jpg") 0 0;}
 a#a192:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/izkazh_real_7.jpg") 100px 0;}
+
+a#a193{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/izkazh_real_8.jpg") 0 0;}
+a#a193:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/izkazh_real_8.jpg") 100px 0;}
