--- a/css/style.css
+++ b/css/style.css
@@ -594,3 +594,6 @@ a#a192:hover {width:100px;height:150px;margin:0;padding:0;display:block;backgrou
 
 a#a193{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/izkazh_real_8.jpg") 0 0;}
 a#a193:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/izkazh_real_8.jpg") 100px 0;}
+
+a#a194{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/izkazh_real_9.jpg") 0 0;}
+a#a194:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/izkazh_real_9.jpg") 100px 0;}
