--- a/css/style.css
+++ b/css/style.css
@@ -600,3 +600,6 @@ a#a194:hover {width:100px;height:150px;margin:0;padding:0;display:block;backgrou
 
 a#a195{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/izkazh_real_10.jpg") 0 0;}
 a#a195:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/izkazh_real_10.jpg") 100px 0;}
+
+a#a196{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/izkazh_real_11.jpg") 0 0;}
+a#a196:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/izkazh_real_11.jpg") 100px 0;}
