--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,6 @@ div#body-con {
     box-shadow: 0px 0px 9px 0px rgba(128,125,128,1);
     min-height:800px;}
 td img {padding:0; }
-
 div#block {width:1000px;padding:0px;margin:0px;display:block;overflow-x:auto;}
 
 a#a1 {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/brian_tracy_1.jpg") 0 0;}
@@ -603,3 +602,6 @@ a#a195:hover {width:100px;height:150px;margin:0;padding:0;display:block;backgrou
 
 a#a196{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/izkazh_real_11.jpg") 0 0;}
 a#a196:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/izkazh_real_11.jpg") 100px 0;}
+
+a#a197{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/izkazh_real_12.jpg") 0 0;}
+a#a197:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/izkazh_real_12.jpg") 100px 0;}
