Прочитал Кошка среди голубей

--- a/css/style.css
+++ b/css/style.css
@@ -605,3 +605,6 @@ a#a196:hover {width:100px;height:150px;margin:0;padding:0;display:block;backgrou
 
 a#a197{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/izkazh_real_12.jpg") 0 0;}
 a#a197:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/izkazh_real_12.jpg") 100px 0;}
+
+a#a198{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/pyaro_34.jpg") 0 0;}
+a#a198:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/pyaro_34.jpg") 100px 0;}
