Прочитал Защита периметра 1

--- a/css/style.css
+++ b/css/style.css
@@ -608,3 +608,6 @@ a#a197:hover {width:100px;height:150px;margin:0;padding:0;display:block;backgrou
 
 a#a198{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/pyaro_34.jpg") 0 0;}
 a#a198:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/pyaro_34.jpg") 100px 0;}
+
+a#a199{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/zaschita_perimetra_1.jpg") 0 0;}
+a#a199:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/zaschita_perimetra_1.jpg") 100px 0;}
