Прочитал Защита периметра 2

--- a/css/style.css
+++ b/css/style.css
@@ -611,3 +611,6 @@ a#a198:hover {width:100px;height:150px;margin:0;padding:0;display:block;backgrou
 
 a#a199{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/zaschita_perimetra_1.jpg") 0 0;}
 a#a199:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/zaschita_perimetra_1.jpg") 100px 0;}
+
+a#a200{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/zaschita_perimetra_2.jpg") 0 0;}
+a#a200:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/zaschita_perimetra_2.jpg") 100px 0;}
