--- a/css/style.css
+++ b/css/style.css
@@ -614,3 +614,6 @@ a#a199:hover {width:100px;height:150px;margin:0;padding:0;display:block;backgrou
 
 a#a200{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/zaschita_perimetra_2.jpg") 0 0;}
 a#a200:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/zaschita_perimetra_2.jpg") 100px 0;}
+
+a#a201{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/zaschita_perimetra_3.jpg") 0 0;}
+a#a201:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/zaschita_perimetra_3.jpg") 100px 0;}
