Прочитал Темный травник. Тестировщик игровых сценариев

--- a/css/style.css
+++ b/css/style.css
@@ -620,3 +620,6 @@ a#a201:hover {width:100px;height:150px;margin:0;padding:0;display:block;backgrou
 
 a#a202{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/zaschita_perimetra_4.jpg") 0 0;}
 a#a202:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/zaschita_perimetra_4.jpg") 100px 0;}
+
+a#a203{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/temni_travnik_1.jpg") 0 0;}
+a#a203:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/temni_travnik_1.jpg") 100px 0;}
