--- a/css/style.css
+++ b/css/style.css
@@ -623,3 +623,6 @@ a#a202:hover {width:100px;height:150px;margin:0;padding:0;display:block;backgrou
 
 a#a203{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/temni_travnik_1.jpg") 0 0;}
 a#a203:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/temni_travnik_1.jpg") 100px 0;}
+
+a#a204{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/temni_travnik_2.jpg") 0 0;}
+a#a204:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/temni_travnik_2.jpg") 100px 0;}
