Прочитал Верховья Стикса

--- a/css/style.css
+++ b/css/style.css
@@ -626,3 +626,6 @@ a#a203:hover {width:100px;height:150px;margin:0;padding:0;display:block;backgrou
 
 a#a204{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/temni_travnik_2.jpg") 0 0;}
 a#a204:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/temni_travnik_2.jpg") 100px 0;}
+
+a#a205{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/temni_travnik_3.jpg") 0 0;}
+a#a205:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/temni_travnik_3.jpg") 100px 0;}
