--- a/css/style.css
+++ b/css/style.css
@@ -629,3 +629,6 @@ a#a204:hover {width:100px;height:150px;margin:0;padding:0;display:block;backgrou
 
 a#a205{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/temni_travnik_3.jpg") 0 0;}
 a#a205:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/temni_travnik_3.jpg") 100px 0;}
+
+a#a206{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/temni_travnik_4.jpg") 0 0;}
+a#a206:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/temni_travnik_4.jpg") 100px 0;}
