--- a/css/style.css
+++ b/css/style.css
@@ -632,3 +632,6 @@ a#a205:hover {width:100px;height:150px;margin:0;padding:0;display:block;backgrou
 
 a#a206{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/temni_travnik_4.jpg") 0 0;}
 a#a206:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/temni_travnik_4.jpg") 100px 0;}
+
+a#a207{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/alians_neydachnikov_1.jpg") 0 0;}
+a#a207:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/alians_neydachnikov_1.jpg") 100px 0;}
