--- a/css/style.css
+++ b/css/style.css
@@ -638,3 +638,6 @@ a#a207:hover {width:100px;height:150px;margin:0;padding:0;display:block;backgrou
 
 a#a208{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/alians_neydachnikov_2.jpg") 0 0;}
 a#a208:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/alians_neydachnikov_2.jpg") 100px 0;}
+
+a#a209{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/alians_neydachnikov_3.jpg") 0 0;}
+a#a209:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/alians_neydachnikov_3.jpg") 100px 0;}
