Прочитал Путь королей

--- a/css/style.css
+++ b/css/style.css
@@ -641,3 +641,6 @@ a#a208:hover {width:100px;height:150px;margin:0;padding:0;display:block;backgrou
 
 a#a209{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/alians_neydachnikov_3.jpg") 0 0;}
 a#a209:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/alians_neydachnikov_3.jpg") 100px 0;}
+
+a#a210{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/arhiv_buresveta_1.jpg") 0 0;}
+a#a210:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/arhiv_buresveta_1.jpg") 100px 0;}
