Прочитал Слова сияния

--- a/css/style.css
+++ b/css/style.css
@@ -644,3 +644,6 @@ a#a209:hover {width:100px;height:150px;margin:0;padding:0;display:block;backgrou
 
 a#a210{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/arhiv_buresveta_1.jpg") 0 0;}
 a#a210:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/arhiv_buresveta_1.jpg") 100px 0;}
+
+a#a211{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/arhiv_buresveta_2.jpg") 0 0;}
+a#a211:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/arhiv_buresveta_2.jpg") 100px 0;}
