Прочитал Ритм войны

--- a/css/style.css
+++ b/css/style.css
@@ -650,3 +650,6 @@ a#a211:hover {width:100px;height:150px;margin:0;padding:0;display:block;backgrou
 
 a#a212{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/arhiv_buresveta_3.jpg") 0 0;}
 a#a212:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/arhiv_buresveta_3.jpg") 100px 0;}
+
+a#a213{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/arhiv_buresveta_4.jpg") 0 0;}
+a#a213:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/arhiv_buresveta_4.jpg") 100px 0;}
