--- a/css/style.css
+++ b/css/style.css
@@ -653,3 +653,6 @@ a#a212:hover {width:100px;height:150px;margin:0;padding:0;display:block;backgrou
 
 a#a213{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/arhiv_buresveta_4.jpg") 0 0;}
 a#a213:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/arhiv_buresveta_4.jpg") 100px 0;}
+
+a#a214{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/sistema_1.jpg") 0 0;}
+a#a214:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/sistema_1.jpg") 100px 0;}
