Прочитал Право на месть

--- a/css/style.css
+++ b/css/style.css
@@ -665,3 +665,6 @@ a#a216:hover {width:100px;height:150px;margin:0;padding:0;display:block;backgrou
 
 a#a217{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/metro_34.jpg") 0 0;}
 a#a217:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/metro_34.jpg") 100px 0;}
+
+a#a218{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/metro_79.jpg") 0 0;}
+a#a218:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/metro_79.jpg") 100px 0;}
