Прочитал Без права на ошибку

--- a/css/style.css
+++ b/css/style.css
@@ -668,3 +668,6 @@ a#a217:hover {width:100px;height:150px;margin:0;padding:0;display:block;backgrou
 
 a#a218{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/metro_79.jpg") 0 0;}
 a#a218:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/metro_79.jpg") 100px 0;}
+
+a#a219{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/bez_prava_na_oshibky.jpg") 0 0;}
+a#a219:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/bez_prava_na_oshibky.jpg") 100px 0;}
