--- a/css/style.css
+++ b/css/style.css
@@ -671,3 +671,6 @@ a#a218:hover {width:100px;height:150px;margin:0;padding:0;display:block;backgrou
 
 a#a219{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/bez_prava_na_oshibky.jpg") 0 0;}
 a#a219:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/bez_prava_na_oshibky.jpg") 100px 0;}
+
+a#a220{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/metro_27.jpg") 0 0;}
+a#a220:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/metro_27.jpg") 100px 0;}
