Прочитал Огонь и пепел

--- a/css/style.css
+++ b/css/style.css
@@ -677,3 +677,6 @@ a#a220:hover {width:100px;height:150px;margin:0;padding:0;display:block;backgrou
 
 a#a221{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/metro_86.jpg") 0 0;}
 a#a221:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/metro_86.jpg") 100px 0;}
+
+a#a222{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/metro_89.jpg") 0 0;}
+a#a222:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/metro_89.jpg") 100px 0;}
