Прочитал Жизнь и необычайные приключения солдата Ивана Чонкина

--- a/css/style.css
+++ b/css/style.css
@@ -683,3 +683,6 @@ a#a222:hover {width:100px;height:150px;margin:0;padding:0;display:block;backgrou
 
 a#a223{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/metro_29.jpg") 0 0;}
 a#a223:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/metro_29.jpg") 100px 0;}
+
+a#a224{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/ivan_chonkin.jpg") 0 0;}
+a#a224:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/ivan_chonkin.jpg") 100px 0;}
