--- a/css/style.css
+++ b/css/style.css
@@ -686,3 +686,6 @@ a#a223:hover {width:100px;height:150px;margin:0;padding:0;display:block;backgrou
 
 a#a224{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/ivan_chonkin.jpg") 0 0;}
 a#a224:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/ivan_chonkin.jpg") 100px 0;}
+
+a#a225{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/100_med_rasskazov.jpg") 0 0;}
+a#a225:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/100_med_rasskazov.jpg") 100px 0;}
