Прочитал Демон из Пустоши

--- a/css/style.css
+++ b/css/style.css
@@ -689,3 +689,6 @@ a#a224:hover {width:100px;height:150px;margin:0;padding:0;display:block;backgrou
 
 a#a225{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/100_med_rasskazov.jpg") 0 0;}
 a#a225:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/100_med_rasskazov.jpg") 100px 0;}
+
+a#a226{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/graf_averin_3.jpg") 0 0;}
+a#a226:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/graf_averin_3.jpg") 100px 0;}
