--- a/css/style.css
+++ b/css/style.css
@@ -692,3 +692,6 @@ a#a225:hover {width:100px;height:150px;margin:0;padding:0;display:block;backgrou
 
 a#a226{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/graf_averin_3.jpg") 0 0;}
 a#a226:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/graf_averin_3.jpg") 100px 0;}
+
+a#a227{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/graf_averin_4.jpg") 0 0;}
+a#a227:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/graf_averin_4.jpg") 100px 0;}
