--- a/css/style.css
+++ b/css/style.css
@@ -695,3 +695,6 @@ a#a226:hover {width:100px;height:150px;margin:0;padding:0;display:block;backgrou
 
 a#a227{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/graf_averin_4.jpg") 0 0;}
 a#a227:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/graf_averin_4.jpg") 100px 0;}
+
+a#a228{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/graf_averin_01.jpg") 0 0;}
+a#a228:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/graf_averin_01.jpg") 100px 0;}
