Прочитал Возвращение в СССР #1

--- a/css/style.css
+++ b/css/style.css
@@ -698,3 +698,6 @@ a#a227:hover {width:100px;height:150px;margin:0;padding:0;display:block;backgrou
 
 a#a228{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/graf_averin_01.jpg") 0 0;}
 a#a228:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/graf_averin_01.jpg") 100px 0;}
+
+a#a229{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_1.jpg") 0 0;}
+a#a229:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_1.jpg") 100px 0;}
