Прочитал Возвращение в СССР #2

--- a/css/style.css
+++ b/css/style.css
@@ -701,3 +701,6 @@ a#a228:hover {width:100px;height:150px;margin:0;padding:0;display:block;backgrou
 
 a#a229{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_1.jpg") 0 0;}
 a#a229:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_1.jpg") 100px 0;}
+
+a#a230{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_2.jpg") 0 0;}
+a#a230:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_2.jpg") 100px 0;}
