Прочитал Возвращение в СССР #3

--- a/css/style.css
+++ b/css/style.css
@@ -704,3 +704,6 @@ a#a229:hover {width:100px;height:150px;margin:0;padding:0;display:block;backgrou
 
 a#a230{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_2.jpg") 0 0;}
 a#a230:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_2.jpg") 100px 0;}
+
+a#a231{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_3.jpg") 0 0;}
+a#a231:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_3.jpg") 100px 0;}
