--- a/css/style.css
+++ b/css/style.css
@@ -707,3 +707,6 @@ a#a230:hover {width:100px;height:150px;margin:0;padding:0;display:block;backgrou
 
 a#a231{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_3.jpg") 0 0;}
 a#a231:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_3.jpg") 100px 0;}
+
+a#a232{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_4.jpg") 0 0;}
+a#a232:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_4.jpg") 100px 0;}
