--- a/css/style.css
+++ b/css/style.css
@@ -716,3 +716,6 @@ a#a233:hover {width:100px;height:150px;margin:0;padding:0;display:block;backgrou
 
 a#a234{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_6.jpg") 0 0;}
 a#a234:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_6.jpg") 100px 0;}
+
+a#a235{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_7.jpg") 0 0;}
+a#a235:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_7.jpg") 100px 0;}
