Прочитал Возвращение в СССР #8

--- a/css/style.css
+++ b/css/style.css
@@ -719,3 +719,6 @@ a#a234:hover {width:100px;height:150px;margin:0;padding:0;display:block;backgrou
 
 a#a235{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_7.jpg") 0 0;}
 a#a235:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_7.jpg") 100px 0;}
+
+a#a236{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_8.jpg") 0 0;}
+a#a236:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_8.jpg") 100px 0;}
