--- a/css/style.css
+++ b/css/style.css
@@ -722,3 +722,6 @@ a#a235:hover {width:100px;height:150px;margin:0;padding:0;display:block;backgrou
 
 a#a236{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_8.jpg") 0 0;}
 a#a236:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_8.jpg") 100px 0;}
+
+a#a237{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_9.jpg") 0 0;}
+a#a237:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_9.jpg") 100px 0;}
