Прочитал Возвращение в СССР #10

--- a/css/style.css
+++ b/css/style.css
@@ -725,3 +725,6 @@ a#a236:hover {width:100px;height:150px;margin:0;padding:0;display:block;backgrou
 
 a#a237{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_9.jpg") 0 0;}
 a#a237:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_9.jpg") 100px 0;}
+
+a#a238{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_10.jpg") 0 0;}
+a#a238:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_10.jpg") 100px 0;}
