Прочитал Возвращение в СССР #11

--- a/css/style.css
+++ b/css/style.css
@@ -728,3 +728,6 @@ a#a237:hover {width:100px;height:150px;margin:0;padding:0;display:block;backgrou
 
 a#a238{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_10.jpg") 0 0;}
 a#a238:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_10.jpg") 100px 0;}
+
+a#a239{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_11.jpg") 0 0;}
+a#a239:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_11.jpg") 100px 0;}
