--- a/css/style.css
+++ b/css/style.css
@@ -731,3 +731,6 @@ a#a238:hover {width:100px;height:150px;margin:0;padding:0;display:block;backgrou
 
 a#a239{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_11.jpg") 0 0;}
 a#a239:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_11.jpg") 100px 0;}
+
+a#a240{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_12.jpg") 0 0;}
+a#a240:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_12.jpg") 100px 0;}
