Прочитал Возвращение в СССР #13

--- a/css/style.css
+++ b/css/style.css
@@ -734,3 +734,6 @@ a#a239:hover {width:100px;height:150px;margin:0;padding:0;display:block;backgrou
 
 a#a240{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_12.jpg") 0 0;}
 a#a240:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_12.jpg") 100px 0;}
+
+a#a241{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_13.jpg") 0 0;}
+a#a241:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_13.jpg") 100px 0;}
