--- a/css/style.css
+++ b/css/style.css
@@ -737,3 +737,6 @@ a#a240:hover {width:100px;height:150px;margin:0;padding:0;display:block;backgrou
 
 a#a241{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_13.jpg") 0 0;}
 a#a241:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_13.jpg") 100px 0;}
+
+a#a242{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_14.jpg") 0 0;}
+a#a242:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_14.jpg") 100px 0;}
