Прочитал Возвращение в СССР #15

--- a/css/style.css
+++ b/css/style.css
@@ -740,3 +740,6 @@ a#a241:hover {width:100px;height:150px;margin:0;padding:0;display:block;backgrou
 
 a#a242{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_14.jpg") 0 0;}
 a#a242:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_14.jpg") 100px 0;}
+
+#a243{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_15.jpg") 0 0;}
+a#a243:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_15.jpg") 100px 0;}
